--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Wed Jan 14 03:45:02 PM JST 2026
+Wed Jan 14 03:50:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 44.808 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 47.003 ms
 Testing download speed................................................................................
-Download: 77.97 Mbit/s
+Download: 173.70 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 26.73 Mbit/s
+Upload: 29.59 Mbit/s
