--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Wed Jan 14 03:55:02 PM JST 2026
+Wed Jan 14 04:10:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 46.456 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 44.708 ms
 Testing download speed................................................................................
-Download: 78.34 Mbit/s
+Download: 127.16 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.30 Mbit/s
+Upload: 29.17 Mbit/s
