--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Wed Jan 14 04:20:03 PM JST 2026
+Wed Jan 14 04:25:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 43.271 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 42.718 ms
 Testing download speed................................................................................
-Download: 73.19 Mbit/s
+Download: 114.81 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.46 Mbit/s
+Upload: 5.86 Mbit/s
