--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Wed Jan 14 04:25:02 PM JST 2026
+Wed Jan 14 04:30:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 42.718 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 590.317 ms
 Testing download speed................................................................................
-Download: 114.81 Mbit/s
+Download: 0.94 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 5.86 Mbit/s
+Upload: 4.67 Mbit/s
