--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Wed Jan 14 04:30:04 PM JST 2026
+Wed Jan 14 04:35:04 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 590.317 ms
+Hosted by Allied Telesis Capital Corporation (Misawa) [574.25 km]: 558.61 ms
 Testing download speed................................................................................
-Download: 0.94 Mbit/s
+Download: 1.39 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 4.67 Mbit/s
+Upload: 6.33 Mbit/s
