--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Wed Jan 14 04:45:09 PM JST 2026
+Wed Jan 14 04:50:09 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 501.681 ms
+Hosted by SPARCS (Daejeon) [1108.21 km]: 213.546 ms
 Testing download speed................................................................................
-Download: 2.12 Mbit/s
+Download: 1.06 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 4.73 Mbit/s
+Upload: 4.62 Mbit/s
