--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 03:10:03 AM JST 2026
+Thu Jan 15 03:15:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 40.799 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 36.681 ms
 Testing download speed................................................................................
-Download: 18.44 Mbit/s
+Download: 67.72 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.82 Mbit/s
+Upload: 11.19 Mbit/s
