--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 04:25:10 AM JST 2026
+Thu Jan 15 04:35:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Kairun Services (Chiba) [38.77 km]: 42.874 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 38.833 ms
 Testing download speed................................................................................
-Download: 121.92 Mbit/s
+Download: 51.75 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 24.98 Mbit/s
+Upload: 6.85 Mbit/s
