--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 06:10:02 AM JST 2026
+Thu Jan 15 06:15:04 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.250)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 36.522 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 34.374 ms
 Testing download speed................................................................................
-Download: 188.54 Mbit/s
+Download: 51.60 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.97 Mbit/s
+Upload: 29.26 Mbit/s
