--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 07:10:02 AM JST 2026
+Thu Jan 15 07:15:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [395.69 km]: 41.533 ms
+Hosted by Rakuten Mobile, Inc (Sanda) [36.16 km]: 29.172 ms
 Testing download speed................................................................................
-Download: 158.53 Mbit/s
+Download: 147.19 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.75 Mbit/s
+Upload: 30.27 Mbit/s
