--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 06:55:03 AM JST 2026
+Thu Jan 15 07:10:02 AM JST 2026
 Retrieving speedtest.net configuration...
-Testing from Rakuten Mobile Network (211.7.96.250)...
+Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 33.682 ms
+Hosted by GSL Networks (Tokyo) [395.69 km]: 41.533 ms
 Testing download speed................................................................................
-Download: 75.16 Mbit/s
+Download: 158.53 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.58 Mbit/s
+Upload: 34.75 Mbit/s
