--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 07:40:03 AM JST 2026
+Thu Jan 15 07:45:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Sanda) [36.16 km]: 28.451 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 36.893 ms
 Testing download speed................................................................................
-Download: 134.68 Mbit/s
+Download: 115.17 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 37.29 Mbit/s
+Upload: 35.54 Mbit/s
