--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 07:50:02 AM JST 2026
+Thu Jan 15 07:55:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 36.773 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 34.402 ms
 Testing download speed................................................................................
-Download: 61.84 Mbit/s
+Download: 84.87 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 20.59 Mbit/s
+Upload: 33.39 Mbit/s
